[package]
name = "solana-mev-bot"
version = "0.1.0"
edition = "2021"
authors = ["MEV Bot Developer"]
description = "Production-ready Solana MEV trading bot with low-latency execution"
license = "MIT"

[dependencies]
# Solana SDK
solana-sdk = "1.18"
solana-client = "1.18"
solana-program = "1.18"
solana-account-decoder = "1.18"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Math & computation
rust_decimal = { version = "1.32", features = ["serde"] }
num-bigint = "0.4"
num-traits = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# HTTP client for RPC calls
reqwest = { version = "0.11", features = ["json", "native-tls"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
async-trait = "0.1"

# Cryptography
base64 = "0.21"
bs58 = "0.5"

# DEX SDKs (if available as crates, otherwise we'll implement)
# Note: Most DEXes don't have official Rust SDKs, so we'll implement protocol interactions

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "mev-bot"
path = "src/main.rs"
